--- a/Index.html
+++ b/Index.html
@@ -30,6 +30,20 @@
             </div>
         </div>
 
+        <div class="stats-panel liquid-glass">
+            <h3>Live Stats</h3>
+            <div class="stats-grid">
+                <div class="stat-card">
+                    <h3>Ao5</h3>
+                    <div id="liveAo5">--</div>
+                </div>
+                <div class="stat-card">
+                    <h3>Ao12</h3>
+                    <div id="liveAo12">--</div>
+                </div>
+            </div>
+        </div>
+        
         <div class="controls">
             <button id="newSession">New Session</button>
             <button id="exportBtn">Export JSON</button>
